# project_fastapi_online

./: README.md  pyproject.toml
fastapi_helloworld_online/: main.py
tests/: test_main.py
